--- a/index.html
+++ b/index.html
@@ -1,370 +1,390 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Octopath Traveler 0</title>
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Octopath Traveler 0</title>
 
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-      }
+<style>
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
 
-      body {
-        background: #020617;
-        color: #ffffff;
-        line-height: 1.7;
-      }
+body {
+  background: #020617;
+  color: #ffffff;
+  line-height: 1.7;
+}
 
-      /* NAVBAR */
-      header {
-        position: fixed;
-        width: 100%;
-        top: 0;
-        z-index: 1000;
-        background: linear-gradient(
-          to bottom,
-          rgba(2, 6, 23, 0.9),
-          rgba(2, 6, 23, 0.4)
-        );
-        backdrop-filter: blur(6px);
-        padding: 16px 60px;
-      }
+/* ================= NAVBAR ================= */
+header {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 1000;
+  background: linear-gradient(to bottom, rgba(2,6,23,0.95), rgba(2,6,23,0.5));
+  backdrop-filter: blur(8px);
+  padding: 16px 60px;
+}
 
-      .navbar {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        position: relative;
-      }
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
-      .logo {
-        font-size: 24px;
-        font-weight: 700;
-        color: #facc15;
-        letter-spacing: 1px;
-      }
+.logo {
+  font-size: 24px;
+  font-weight: 700;
+  color: #facc15;
+}
 
-      .nav-links {
-        list-style: none;
-        display: flex;
-        gap: 28px;
-      }
+.nav-links {
+  list-style: none;
+  display: flex;
+  gap: 28px;
+}
 
-      .nav-links a {
-        color: #e5e7eb;
-        text-decoration: none;
-        font-weight: 500;
-      }
+.nav-links a {
+  color: #e5e7eb;
+  text-decoration: none;
+  font-weight: 500;
+}
 
-      .nav-links a:hover {
-        color: #facc15;
-      }
+.nav-links a:hover {
+  color: #facc15;
+}
 
-      /* HAMBURGER */
-      .hamburger {
-        display: none;
-        flex-direction: column;
-        gap: 6px;
-        cursor: pointer;
-      }
+/* Hamburger */
+.hamburger {
+  display: none;
+  flex-direction: column;
+  gap: 6px;
+  cursor: pointer;
+}
 
-      .hamburger span {
-        width: 26px;
-        height: 3px;
-        background: #facc15;
-        border-radius: 3px;
-        transition: 0.3s;
-      }
+.hamburger span {
+  width: 26px;
+  height: 3px;
+  background: #facc15;
+  border-radius: 3px;
+}
 
-      /* HERO */
-      .hero {
-        height: 100vh;
-        background: url("bg.png") center/cover no-repeat;
-        position: relative;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-      }
+/* ================= HERO ================= */
+.hero {
+  min-height: 100vh;
+  background: url("bg.png") center/cover no-repeat;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 120px 20px 80px;
+}
 
-      .hero::after {
-        content: "";
-        position: absolute;
-        inset: 0;
-        background: radial-gradient(
-          circle at top,
-          rgba(2, 6, 23, 0.4),
-          rgba(2, 6, 23, 0.95)
-        );
-      }
+.hero::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: radial-gradient(circle at top, rgba(2,6,23,0.4), rgba(2,6,23,0.95));
+}
 
-      .hero-content {
-        position: relative;
-        max-width: 800px;
-        padding: 20px;
-        z-index: 1;
-      }
+.hero-content {
+  position: relative;
+  max-width: 800px;
+  z-index: 1;
+}
 
-      .hero-content h1 {
-        font-size: 56px;
-        margin-bottom: 24px;
-        color: #facc15;
-      }
+.hero-content h1 {
+  font-size: 56px;
+  margin-bottom: 24px;
+  color: #facc15;
+}
 
-      .hero-content p {
-        font-size: 18px;
-        color: #e5e7eb;
-        margin-bottom: 40px;
-      }
+.hero-content p {
+  font-size: 18px;
+  color: #e5e7eb;
+  margin-bottom: 40px;
+}
 
-      .btn {
-        padding: 16px 40px;
-        border-radius: 999px;
-        border: none;
-        background: linear-gradient(135deg, #22d3ee, #06b6d4);
-        font-size: 16px;
-        font-weight: bold;
-        cursor: pointer;
-        color: #020617;
-        transition: transform 0.3s;
-      }
+.btn {
+  padding: 16px 40px;
+  border-radius: 999px;
+  border: none;
+  background: linear-gradient(135deg, #22d3ee, #06b6d4);
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
+  color: #020617;
+  transition: transform 0.3s;
+}
 
-      .btn:hover {
-        transform: translateY(-4px);
-      }
+.btn:hover {
+  transform: translateY(-4px);
+}
 
-      section {
-        padding: 120px 60px;
-      }
+/* ================= SECTIONS ================= */
+section {
+  padding: 120px 60px;
+}
 
-      /* FEATURES */
-      .features h2,
-      .download h2 {
-        font-size: 40px;
-        margin-bottom: 60px;
-        color: #facc15;
-        text-align: center;
-      }
+.features h2,
+.download h2 {
+  text-align: center;
+  font-size: 40px;
+  margin-bottom: 60px;
+  color: #facc15;
+}
 
-      .feature-box {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-        gap: 40px;
-      }
+/* FEATURES */
+.feature-box {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+  gap: 40px;
+}
 
-      .card {
-        background: rgba(255, 255, 255, 0.06);
-        padding: 40px 30px;
-        border-radius: 18px;
-        backdrop-filter: blur(8px);
-        text-align: center;
-      }
+.card {
+  background: rgba(255,255,255,0.06);
+  padding: 40px 30px;
+  border-radius: 18px;
+  text-align: center;
+}
 
-      .card h3 {
-        margin-bottom: 16px;
-        color: #22d3ee;
-      }
+.card h3 {
+  color: #22d3ee;
+  margin-bottom: 16px;
+}
 
-      .card p {
-        color: #d1d5db;
-      }
+.card p {
+  color: #d1d5db;
+}
 
-      /* STORY */
-      .story {
-        background: radial-gradient(circle at top left, #020617, #030712);
-      }
+/* ================= STORY ================= */
+.story {
+  background: radial-gradient(circle at top left, #020617, #030712);
+}
 
-      .story-container {
-        max-width: 1200px;
-        margin: auto;
-        display: grid;
-        grid-template-columns: 1.1fr 0.9fr;
-        gap: 70px;
-        align-items: center;
-      }
+.story-container {
+  max-width: 1200px;
+  margin: auto;
+  display: grid;
+  grid-template-columns: 1.1fr 0.9fr;
+  gap: 70px;
+  align-items: center;
+}
 
-      .story-text h2 {
-        font-size: 52px;
-        line-height: 1.15;
-        margin-bottom: 32px;
-      }
+.story-text h2 {
+  font-size: 52px;
+  line-height: 1.15;
+  margin-bottom: 32px;
+}
 
-      .story-text span {
-        color: #22d3ee;
-      }
+.story-text h2 span {
+  color: #22d3ee;
+}
 
-      .story-text p {
-        color: #cbd5e1;
-        font-size: 17px;
-        margin-bottom: 18px;
-        max-width: 520px;
-      }
+.story-text p {
+  color: #cbd5e1;
+  font-size: 17px;
+  margin-bottom: 18px;
+  max-width: 520px;
+}
 
-      .story-image img {
-        width: 100%;
-        border-radius: 22px;
-        box-shadow: 0 40px 100px rgba(0, 0, 0, 0.7);
-      }
+.story-text strong {
+  color: #ffffff;
+}
 
-      /* DOWNLOAD */
-      .download {
-        text-align: center;
-        background: linear-gradient(180deg, #020617, #030712);
-      }
+.story-image img {
+  width: 100%;
+  border-radius: 22px;
+  box-shadow: 0 40px 100px rgba(0,0,0,0.7);
+}
 
-      .download p {
-        margin-bottom: 30px;
-        color: #e5e7eb;
-      }
+/* ================= DOWNLOAD ================= */
+.download {
+  text-align: center;
+  background: linear-gradient(180deg, #020617, #030712);
+}
 
-      footer {
-        padding: 30px;
-        text-align: center;
-        font-size: 14px;
-        color: #9ca3af;
-        background: #020617;
-      }
+.download p {
+  margin-bottom: 30px;
+  color: #e5e7eb;
+}
 
-      /* RESPONSIVE */
-      @media (max-width: 900px) {
-        header {
-          padding: 16px 30px;
-        }
+/* ================= FOOTER ================= */
+footer {
+  padding: 30px;
+  text-align: center;
+  font-size: 14px;
+  color: #9ca3af;
+}
 
-        .hero-content h1 {
-          font-size: 40px;
-        }
+/* ================= RESPONSIVE ================= */
+@media (max-width: 900px) {
+  header {
+    padding: 14px 20px;
+  }
 
-        .story-container {
-          grid-template-columns: 1fr;
-          text-align: center;
-        }
+  .hamburger {
+    display: flex;
+  }
 
-        .story-text p {
-          margin: auto;
-        }
-      }
+  .nav-links {
+    position: absolute;
+    top: 64px;
+    left: 0;
+    width: 100%;
+    background: rgba(2,6,23,0.98);
+    flex-direction: column;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.35s ease, opacity 0.3s ease;
+    opacity: 0;
+  }
 
-      @media (max-width: 768px) {
-        .hamburger {
-          display: flex;
-        }
+  .nav-links.active {
+    max-height: 260px;
+    opacity: 1;
+  }
 
-        .nav-links {
-          position: absolute;
-          top: 100%;
-          left: 0;
-          width: 100%;
-          background: rgba(2, 6, 23, 0.95);
-          flex-direction: column;
-          max-height: 0;
-          overflow: hidden;
-          transition: max-height 0.4s ease;
-        }
+  .nav-links li {
+    border-bottom: 1px solid rgba(255,255,255,0.06);
+  }
 
-        .nav-links.active {
-          max-height: 300px;
-        }
+  .nav-links a {
+    padding: 16px;
+    text-align: center;
+    display: block;
+  }
 
-        .nav-links li {
-          border-top: 1px solid rgba(255, 255, 255, 0.08);
-        }
+  .hero-content h1 {
+    font-size: 34px;
+  }
 
-        .nav-links a {
-          padding: 18px;
-          display: block;
-          text-align: center;
-        }
-      }
-    </style>
-  </head>
+  .hero-content p {
+    font-size: 16px;
+  }
 
-  <body>
-    <header>
-      <nav class="navbar">
-        <div class="logo">Octopath Traveler 0</div>
+  .btn {
+    width: 100%;
+    max-width: 280px;
+  }
 
-        <div class="hamburger" id="hamburger">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
+  .story-container {
+    grid-template-columns: 1fr;
+    text-align: center;
+  }
 
-        <ul class="nav-links" id="navLinks">
-          <li><a href="#home">Home</a></li>
-          <li><a href="#features">Features</a></li>
-          <li><a href="#story">Story</a></li>
-          <li><a href="#download">Download</a></li>
-        </ul>
-      </nav>
-    </header>
+  .story-text h2 {
+    font-size: 32px;
+  }
 
-    <section class="hero" id="home">
-      <div class="hero-content">
-        <h1>Begin Your Path, Shape Your Destiny</h1>
-        <p>
-          Enter the world of Orsterra in Octopath Traveler 0. Experience eight
-          intertwined journeys and iconic HD-2D visuals.
-        </p>
-        <button class="btn">Start Your Journey</button>
-      </div>
-    </section>
+  .story-text p {
+    margin: auto;
+  }
 
-    <section class="features" id="features">
-      <h2>Game Features</h2>
-      <div class="feature-box">
-        <div class="card">
-          <h3>Eight Travelers</h3>
-          <p>Unique stories, skills, and destinies.</p>
-        </div>
-        <div class="card">
-          <h3>HD-2D Visuals</h3>
-          <p>Classic pixel art meets modern effects.</p>
-        </div>
-        <div class="card">
-          <h3>Turn-Based Combat</h3>
-          <p>Master the Break & Boost system.</p>
-        </div>
-      </div>
-    </section>
+  .story-image img {
+    max-width: 320px;
+    margin: 40px auto 0;
+  }
+}
+</style>
+</head>
 
-    <section class="story" id="story">
-      <div class="story-container">
-        <div class="story-text">
-          <h2>A World of <span>Interconnected Fates</span></h2>
-          <p>
-            Eight travelers embark on journeys shaped by destiny, choices, and
-            courage.
-          </p>
-          <button class="btn">Discover the World</button>
-        </div>
-        <div class="story-image">
-          <img src="story.jpg" alt="Octopath Characters" />
-        </div>
-      </div>
-    </section>
+<body>
 
-    <section class="download" id="download">
-      <h2>Start Your Adventure</h2>
-      <p>Available on PC & Console</p>
-      <button class="btn">Download Now</button>
-    </section>
+<header>
+  <nav class="navbar">
+    <div class="logo">Octopath Traveler 0</div>
 
-    <footer>
-      <p>&copy; 2025 Square Enix. Fan-made promotional website.</p>
-    </footer>
+    <div class="hamburger" id="hamburger">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
 
-    <script>
-      const hamburger = document.getElementById("hamburger");
-      const navLinks = document.getElementById("navLinks");
+    <ul class="nav-links" id="navLinks">
+      <li><a href="#home">Home</a></li>
+      <li><a href="#features">Features</a></li>
+      <li><a href="#story">Story</a></li>
+      <li><a href="#download">Download</a></li>
+    </ul>
+  </nav>
+</header>
 
-      hamburger.addEventListener("click", () => {
-        navLinks.classList.toggle("active");
-      });
-    </script>
-  </body>
+<section class="hero" id="home">
+  <div class="hero-content">
+    <h1>Begin Your Path, Shape Your Destiny</h1>
+    <p>
+      Enter the world of Orsterra in Octopath Traveler 0.  
+      Eight travelers. Eight destinies. One epic journey.
+    </p>
+    <button class="btn">Start Your Journey</button>
+  </div>
+</section>
+
+<section class="features" id="features">
+  <h2>Game Features</h2>
+  <div class="feature-box">
+    <div class="card">
+      <h3>Eight Travelers</h3>
+      <p>Unique stories, skills, and motivations.</p>
+    </div>
+    <div class="card">
+      <h3>HD-2D Visuals</h3>
+      <p>Classic pixel art with modern lighting.</p>
+    </div>
+    <div class="card">
+      <h3>Strategic Combat</h3>
+      <p>Break & Boost turn-based system.</p>
+    </div>
+  </div>
+</section>
+
+<section class="story" id="story">
+  <div class="story-container">
+    <div class="story-text">
+      <h2>A World of<br><span>Interconnected Fates</span></h2>
+      <p>
+        In Orsterra, eight travelers begin separate journeys—  
+        bound together by destiny.
+      </p>
+      <p>
+        Their paths will cross, their choices will matter,  
+        and their legends will be written by you.
+      </p>
+      <p><strong>Your journey defines their fate.</strong></p>
+      <button class="btn">Discover the World</button>
+    </div>
+
+    <div class="story-image">
+      <img src="story.jpg" alt="Octopath Characters">
+    </div>
+  </div>
+</section>
+
+<section class="download" id="download">
+  <h2>Start Your Adventure</h2>
+  <p>Available on PC and Console</p>
+  <button class="btn">Download Now</button>
+</section>
+
+<footer>
+  <p>&copy; 2025 Square Enix — Fan-made promotional site</p>
+</footer>
+
+<script>
+const hamburger = document.getElementById("hamburger");
+const navLinks = document.getElementById("navLinks");
+
+hamburger.addEventListener("click", () => {
+  navLinks.classList.toggle("active");
+});
+</script>
+
+</body>
 </html>
+
