--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ header {
 .hero-content h1 {
   font-size: 56px;
   margin-bottom: 24px;
-  color: #facc15;
+  color: white;
 }
 
 .hero-content p {
